Updated mstest nuget

--- a/Solita.Slack.Notifier.Tests/Solita.Slack.Notifier.Tests.csproj
+++ b/Solita.Slack.Notifier.Tests/Solita.Slack.Notifier.Tests.csproj
@@ -12,12 +12,11 @@
   </PropertyGroup>
   <Choose>
     <When Condition="('$(VisualStudioVersion)' == '10.0' or '$(VisualStudioVersion)' == '') and '$(TargetFrameworkVersion)' == 'v3.5'" />
-    <Otherwise>
-      <ItemGroup>
-        <Reference Include="Microsoft.VisualStudio.QualityTools.UnitTestFramework" />
-      </ItemGroup>
-    </Otherwise>
+    <Otherwise />
   </Choose>
+  <ItemGroup>
+    <PackageReference Include="MSTest.TestFramework" Version="3.3.1" />
+  </ItemGroup>
   <ItemGroup>
     <ProjectReference Include="..\Solita.Slack.Notifier\Solita.Slack.Notifier.csproj" />
   </ItemGroup>
